--- a/app/src/main/res/layout/dialog_time_picker.xml
+++ b/app/src/main/res/layout/dialog_time_picker.xml
@@ -4,21 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/transparent"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <com.thustop.thestop.widgets.NotoTextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        android:layout_height="46dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        android:text="희망 도착시간"
-        android:background="@drawable/bg_round_top_white"
-        android:layout_gravity="center"
-        style="?android:attr/text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/timePicker"
-        app:layout_constraintStart_toStartOf="@id/timePicker"
-        app:layout_constraintEnd_toEndOf="@id/timePicker"/>
+
     <TimePicker
         android:id="@+id/timePicker"
         android:layout_width="wrap_content"
@@ -30,7 +16,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bt_ok"
+        app:layout_constraintVertical_chainStyle="packed"
         android:descendantFocusability="blocksDescendants"/>
+
+    <com.thustop.thestop.widgets.NotoTextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="46dp"
+        android:gravity="center"
+        android:elevation="1dp"
+        android:textColor="#000000"
+        android:textSize="14sp"
+        android:text="희망 도착시간"
+        android:background="@drawable/bg_round_top_white"
+        android:layout_gravity="center"
+        style="?android:attr/text"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/timePicker"
+        app:layout_constraintStart_toStartOf="@id/timePicker"
+        app:layout_constraintEnd_toEndOf="@id/timePicker"/>
+
+
     <com.thustop.thestop.widgets.NotoButton
         android:id="@+id/bt_ok"
         android:layout_width="0dp"
@@ -40,7 +47,11 @@
         android:textColor="@color/White"
         android:background="@drawable/bg_round_btm_green"
         style="?android:attr/borderlessButtonStyle"
+        app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintTop_toBottomOf="@id/timePicker"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/timePicker"
         app:layout_constraintEnd_toEndOf="@id/timePicker" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
