--- a/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
+++ b/app/src/main/res/layout/fragment_nav_personal_history_ticket.xml
@@ -117,14 +117,40 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <View
                 android:id="@+id/stroke_recruit"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@color/Stroke"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/tv_cancel_route"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <com.thustop.thestop.widgets.NotoTextView
+                android:id="@+id/tv_change_route"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center_vertical"
+                android:paddingStart="34dp"
+                android:paddingEnd="0dp"
+                android:text="출 · 도착지 변경"
+                android:textColor="@color/TextBlack"
+                android:textSize="14sp"
+                android:onClick="@{NavPersonalHistoryTicketFrag::onStopChangeClick}"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/stroke_recruit" />
+
+            <View
+                android:id="@+id/stroke_change_route"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/Stroke"
+                app:layout_constraintTop_toBottomOf="@+id/tv_change_route" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -164,32 +190,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_payment" />
 
-            <com.thustop.thestop.widgets.NotoTextView
-                android:id="@+id/tv_change_route"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:background="?attr/selectableItemBackground"
-                android:gravity="center_vertical"
-                android:paddingStart="34dp"
-                android:paddingEnd="0dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:text="출 · 도착지 변경"
-                android:textColor="@color/TextBlack"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toTopOf="@id/stroke_change_route"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/stroke_payment" />
-
-            <View
-                android:id="@+id/stroke_change_route"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/Stroke"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_change_route" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
