결제하기 구현중.....

--- a/app/src/main/res/layout/fragment_boarding_application_passenger_info.xml
+++ b/app/src/main/res/layout/fragment_boarding_application_passenger_info.xml
@@ -167,47 +167,17 @@
                     app:notoTextStyle="medium" />
 
                 <com.thustop.thestop.widgets.NotoTextView
-                    android:id="@+id/tv_fbapi_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="26dp"
-                    android:layout_marginStart="16dp"
-                    android:text="탑승객 성함"
-                    android:textSize="14sp"
-                    android:textColor="@color/TextBlack"
-                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_alighting_stop"
-                    app:layout_constraintStart_toStartOf="@id/etv_fbapi_name"
-                    app:notoTextStyle="medium"/>
-
-                <com.thustop.thestop.widgets.NotoEditText
-                    android:id="@+id/etv_fbapi_name"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
-                    android:paddingStart="36dp"
-                    android:hint="이름"
-                    android:inputType="textPersonName"
-                    android:textColorHint="@color/TextGray"
-                    android:textSize="14sp"
-                    android:textColor="@color/TextBlack"
-                    android:background="@drawable/bg_round25_grayf5"
-                    android:imeOptions="actionDone"
-                    app:layout_constraintStart_toStartOf="@id/tv_fbapi_alighting_stop"
-                    app:layout_constraintEnd_toEndOf="@id/tv_fbapi_alighting_stop"
-                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_name"/>
-
-                <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_fbapi_boarding_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="22dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="26dp"
                     android:text="탑승 시작일"
-                    android:textSize="14sp"
                     android:textColor="@color/TextBlack"
-                    app:layout_constraintTop_toBottomOf="@id/etv_fbapi_name"
+                    android:textSize="14sp"
                     app:layout_constraintStart_toStartOf="@id/etv_fbapi_boarding_date"
-                    app:notoTextStyle="medium"/>
+                    app:layout_constraintTop_toBottomOf="@+id/tv_fbapi_alighting_stop"
+                    app:notoTextStyle="medium" />
 
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/etv_fbapi_boarding_date"
@@ -215,19 +185,19 @@
                     android:layout_height="48dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/bg_round25_grayf5"
-                    android:paddingStart="36dp"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:gravity="center_vertical"
                     android:hint="yyyy/mm/dd"
-                    android:textColorHint="@color/TextGray"
+                    android:onClick="@{BoardingApplicationPassengerInfoFrag::onCalendarClick}"
+                    android:paddingStart="36dp"
                     android:textColor="@color/TextBlack"
+                    android:textColorHint="@color/TextGray"
                     android:textSize="14sp"
-                    android:focusable="false"
-                    android:clickable="false"
-                    app:layout_constraintEnd_toEndOf="@id/etv_fbapi_name"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@id/etv_fbapi_name"
-                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_boarding_date"
-                    android:onClick="@{BoardingApplicationPassengerInfoFrag::onCalendarClick}"/>
+                    app:layout_constraintEnd_toEndOf="@+id/tv_fbapi_alighting_stop"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="@+id/tv_fbapi_alighting_stop"
+                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_boarding_date" />
 
                 <ImageView
                     android:id="@+id/iv_fbapi_calendar"
@@ -239,45 +209,43 @@
                     app:layout_constraintTop_toTopOf="@id/etv_fbapi_boarding_date"
                     app:layout_constraintBottom_toBottomOf="@id/etv_fbapi_boarding_date"
                     />
+
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_fbapi_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="22dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="40dp"
                     android:text="결제 금액"
-                    android:textSize="14sp"
-                    android:textColor="@color/TextBlack"
+                    android:textColor="@color/Ach20"
+                    android:textSize="16sp"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/etv_fbapi_boarding_date"
-                    app:layout_constraintStart_toStartOf="@id/tv_fbapi_price_value"
-                    app:notoTextStyle="medium"/>
+                    app:notoTextStyle="medium" />
 
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_fbapi_price_value"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
-                    android:background="@drawable/bg_round25_grayf5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="20dp"
                     android:gravity="center_vertical"
-                    android:paddingStart="36dp"
-                    android:text="월 99,000 원"
-                    android:textColor="@color/TextBlack"
-                    android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="@id/etv_fbapi_boarding_date"
-                    app:layout_constraintStart_toStartOf="@id/etv_fbapi_boarding_date"
-                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_price" />
+                    android:text="99,000 원"
+                    android:textColor="@color/Primary"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_fbapi_price"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tv_fbapi_price" />
 
                 <com.thustop.thestop.widgets.NotoTextView
                     android:id="@+id/tv_fbapi_notice"
                     android:layout_width="wrap_content"
                     android:layout_height="28dp"
-                    android:layout_marginStart="16dp"
                     android:gravity="center_vertical"
                     android:text="*탑승 신청 후 노선이 확정되어야 결제 신청이 가능합니다"
-                    android:textSize="10sp"
                     android:textColor="@color/Primary"
-                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_price_value"
-                    app:layout_constraintStart_toStartOf="@id/tv_fbapi_price_value"/>
+                    android:textSize="10sp"
+                    app:layout_constraintStart_toStartOf="@+id/tv_fbapi_price"
+                    app:layout_constraintTop_toBottomOf="@id/tv_fbapi_price_value" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
