결제 기능 완성, 결제 페이지에서 탑승 시작일 선택 없앰(추후 추가해야함), 노선 신청 튕기는 버그 수정, 노선 어댑터 상태 표시 뷰 오류 수정

--- a/app/src/main/res/layout/item_route.xml
+++ b/app/src/main/res/layout/item_route.xml
@@ -174,10 +174,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="11dp"
-            android:width="37dp"
-            android:height="16dp"
             android:background="@drawable/bg_round12_green"
             android:gravity="center"
+            android:paddingStart="5dp"
+            android:paddingTop="1dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="1dp"
             android:text="운행중"
             android:textColor="@color/White"
             android:textSize="10sp"
