--- a/app/src/main/res/layout/dialog_ticket_detail_map.xml
+++ b/app/src/main/res/layout/dialog_ticket_detail_map.xml
@@ -9,7 +9,7 @@
     android:gravity="bottom"
     android:background="@color/transparent"
     app:umanoDragView="@id/drawer"
-    app:umanoPanelHeight="125dp"
+    app:umanoPanelHeight="98dp"
     app:umanoOverlay="true"
     app:umanoShadowHeight="0dp">
 
@@ -40,7 +40,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginEnd="17dp"
-            android:layout_marginBottom="141dp"
+            android:layout_marginBottom="108dp"
             android:elevation="4dp"
             android:src="@drawable/circle_white_gps"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@drawable/bg_round_top_white"
         android:textColor="@color/White"
         android:id="@+id/drawer"
@@ -57,16 +57,96 @@
         android:orientation="vertical">
 
         <View
-            android:id="@+id/swipe"
-            android:textColor="@color/White"
-            android:layout_width="60dp"
-            android:layout_height="500dp"
+            android:id="@+id/v_swipe_bar"
+            android:background="@drawable/bg_round12_graycf"
+            android:layout_width="70dp"
+            android:layout_height="4dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="center_horizontal"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/cl_dtdm_ticket_info"
+            android:layout_width="match_parent"
+            android:layout_height="84dp"
+            app:layout_constraintTop_toBottomOf="@id/v_swipe_bar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+            <ImageView
+                android:id="@+id/iv_dtdm_bus"
+                android:layout_width="16dp"
+                android:layout_height="18dp"
+                android:layout_marginStart="20dp"
+                app:srcCompat="@drawable/ic_bus_green"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintBottom_toTopOf="@id/tv_dtdm_start_via"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+            <com.thustop.thestop.widgets.NotoTextView
+                android:id="@+id/tv_dtdm_bus_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:text="A1005"
+                android:textSize="18sp"
+                android:textColor="@color/TextBlack"
+                app:notoTextStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/iv_dtdm_bus"
+                app:layout_constraintTop_toTopOf="@id/iv_dtdm_bus"
+                app:layout_constraintBottom_toBottomOf="@id/iv_dtdm_bus"/>
+            <com.thustop.thestop.widgets.NotoTextView
+                android:id="@+id/tv_dtdm_start_via"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:text="출발지 이름입니다"
+                android:textSize="13sp"
+                android:textColor="@color/TextBlack"
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/iv_dtdm_bus"
+                app:layout_constraintTop_toBottomOf="@id/iv_dtdm_bus"/>
+            <ImageView
+                android:id="@+id/iv_dtdm_arrow"
+                android:layout_width="5dp"
+                android:layout_height="8dp"
+                android:layout_marginStart="15dp"
+                app:srcCompat="@drawable/ic_arrow_black"
+                app:layout_constraintTop_toTopOf="@id/tv_dtdm_start_via"
+                app:layout_constraintBottom_toBottomOf="@id/tv_dtdm_start_via"
+                app:layout_constraintStart_toEndOf="@id/tv_dtdm_start_via"
+                app:layout_constraintEnd_toStartOf="@id/tv_dtdm_end_via"/>
+            <com.thustop.thestop.widgets.NotoTextView
+                android:id="@+id/tv_dtdm_end_via"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:text="도착지 이름입니다"
+                android:textSize="13sp"
+                android:textColor="@color/TextBlack"
+                app:layout_constraintStart_toEndOf="@id/iv_dtdm_arrow"
+                app:layout_constraintTop_toTopOf="@id/tv_dtdm_start_via"
+                app:layout_constraintBottom_toBottomOf="@id/tv_dtdm_start_via"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_dtdm_vias"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:overScrollMode="never"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@id/cl_dtdm_ticket_info"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_via_list">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
 
-    </LinearLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
